# CPSC436-Project

./: .gitignore  CMakeLists.txt  README.md
data/: score.ini
data/levels/: boss_level_0.csv  boss_level_1.csv  dracula_level.csv  jacko_level.csv  level_0.csv  level_1.csv  level_10.csv  level_11.csv  level_12.csv  level_13.csv  level_14.csv  level_15.csv  level_16.csv  level_17.csv  level_18.csv  level_19.csv  level_2.csv  level_20.csv  level_3.csv  level_4.csv  level_5.csv  level_50.csv  level_6.csv  level_7.csv  level_8.csv  level_9.csv  vlevel_0.csv  vlevel_1.csv  vlevel_10.csv  vlevel_11.csv  vlevel_12.csv  vlevel_13.csv  vlevel_14.csv  vlevel_15.csv  vlevel_16.csv  vlevel_17.csv  vlevel_18.csv  vlevel_19.csv  vlevel_2.csv  vlevel_20.csv  (+8 more)
data/meshes/: cave.mesh
data/shaders/: blur.fs.glsl  cave.fs.glsl  caveEntrance.fs.glsl  edge.fs.glsl  fade.fs.glsl  fade.vs.glsl  grayscale.fs.glsl  health.fs.glsl  health.vs.glsl  recolor.fs.glsl  sample.fs.glsl  sepia.fs.glsl  shake.vs.glsl  split.fs.glsl  sprite.fs.glsl  sprite.vs.glsl  strobe.fs.glsl  text.fs.glsl  text.vs.glsl  water.fs.glsl  wave.fs.glsl
ext/entt/entt/: entt.hpp
ext/entt/entt/entity/: helper.hpp  registry.hpp
ext/sdl/include/SDL/: SDL_assert.h
ext/stb_image/: stb_image.h
shaders/: sample.vs.glsl
src/: main.cpp  panda.cpp  panda.hpp  project_path.hpp  project_path.hpp.in  world.cpp  world.hpp
src/components/: boss.h  bread.h  causesDamage.h  causes_damage.h  cave.h  cave_hole.h  chases.h  collidable.h  dracula.h  enemy.h  evades.h  falling_platform.h  food.h  ghost.h  health.h  hearts.h  hud_element.h  interactable.h  jacko.h  kelly.h  label.h  layer.h  llama.h  new_entrance.h  obeysGravity.h  obeys_gravity.h  obstacle.h  panda.h  pause.h  pause_menu.h  physics.h  platform.h  position.h  powerup.h  score.h  seeks.h  shield.h  spit.h  timer.cpp  timer.h  (+4 more)
src/graphics/: background.cpp  background.h  background_layer.cpp  background_layer.h  camera.cpp  camera.h  cave.cpp  cave.h  cave_entrance.cpp  cave_entrance.h  fade.cpp  fade.h  fade_overlay.cpp  fade_overlay.h  font.cpp  font.h  font_manager.cpp  font_manager.h  framebuffer.cpp  framebuffer.h  gl_include.h  health_bar.cpp  health_bar.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  render.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  sprite.cpp  sprite.h  text.cpp  text.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  (+4 more)
src/level/: boss_level_system.cpp  boss_level_system.h  horizontal_level_system.cpp  horizontal_level_system.h  level.cpp  level.h  level_system.cpp  level_system.h  vertical_level_system.cpp  vertical_level_system.h
src/scene/: boss_scene.cpp  boss_scene.h  boss_scene_dracula.cpp  boss_scene_dracula.h  climbing_scene.cpp  climbing_scene.h  dracula_boss_scene.cpp  dracula_boss_scene.h  game_scene.cpp  game_scene.h  horizontal_scene.cpp  horizontal_scene.h  main_menu_scene.cpp  main_menu_scene.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_mode.h  story_end_scene.cpp  story_end_scene.h  story_intro.cpp  story_intro.h  story_intro_beach.cpp  story_intro_beach.h  story_intro_jungle.cpp  story_intro_jungle.h  test_scene.cpp  test_scene.h  test_scene2.cpp  vertical_scene.cpp  vertical_scene.h
src/systems/: a_star_system.cpp  a_star_system.h  background_render_system.cpp  background_render_system.h  background_transform_system.cpp  background_transform_system.h  boss_level_system.cpp  boss_level_system.h  cave_render_system.cpp  cave_render_system.h  chase_system.cpp  chase_system.h  collision_system.cpp  collision_system.h  damage_system.cpp  damage_system.h  dracula_ai_system.cpp  dracula_ai_system.h  enemy_animation_system.cpp  enemy_animation_system.h  enemy_system.cpp  enemy_system.h  fade_out_render_system.cpp  fade_out_render_system.h  fade_overlay_render_system.cpp  fade_overlay_render_system.h  fade_overlay_system.cpp  fade_overlay_system.h  falling_platform_system.cpp  falling_platform_system.h  ghost_movement_system.cpp  ghost_movement_system.h  health_bar_render_system.cpp  health_bar_render_system.h  health_bar_transform_system.cpp  health_bar_transform_system.h  horizontal_level_system.cpp  horizontal_level_system.h  hud_transform_system.cpp  hud_transform_system.h  (+53 more)
src/util/: Location.cpp  Location.h  ai_nodes.h  behaviour_tree.cpp  behaviour_tree.h  blackboard.h  composite_node.cpp  composite_node.h  constants.h  coordinates.cpp  coordinates.h  csv_reader.cpp  csv_reader.h  entity_pairs.h  gl_utils.cpp  gl_utils.h  input_manager.cpp  input_manager.h  location.cpp  location.h  node.cpp  node.h  property_reader.cpp  property_reader.h  random.cpp  random.h  scene_helper.h  selector_node.cpp  selector_node.h  sound_manager.cpp  sound_manager.h
